{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 18,
  "lineage": "25b1dd4b-8907-a72a-cf7b-adb195884178",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myIGW",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:158969377838:internet-gateway/igw-002aa2178b7c55ee3",
            "id": "igw-002aa2178b7c55ee3",
            "owner_id": "158969377838",
            "tags": {
              "Name": "tcw_igw"
            },
            "tags_all": {
              "Name": "tcw_igw"
            },
            "vpc_id": "vpc-086b83869aea0bab8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-002aa2178b7c55ee3",
            "id": "r-rtb-08b1fbc87525df0ff1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08b1fbc87525df0ff",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.myIGW",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database_route_table",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:158969377838:route-table/rtb-0e284ff0ce76a7884",
            "id": "rtb-0e284ff0ce76a7884",
            "owner_id": "158969377838",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tcw_database_route_table"
            },
            "tags_all": {
              "Name": "tcw_database_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-086b83869aea0bab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:158969377838:route-table/rtb-08b1fbc87525df0ff",
            "id": "rtb-08b1fbc87525df0ff",
            "owner_id": "158969377838",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "tcw_public_route_table"
            },
            "tags_all": {
              "Name": "tcw_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-086b83869aea0bab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database_route_table_association_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5d6ec6aa546ad13",
            "route_table_id": "rtb-0e284ff0ce76a7884",
            "subnet_id": "subnet-091b3a9d675d7b17c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database_route_table",
            "module.vpc.aws_subnet.database_subnet_1",
            "module.vpc.aws_vpc.myVPC",
            "module.vpc.data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database_route_table_association_2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b48793665bef1e9f",
            "route_table_id": "rtb-0e284ff0ce76a7884",
            "subnet_id": "subnet-069fa574f61c0bdb0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database_route_table",
            "module.vpc.aws_subnet.database_subnet_2",
            "module.vpc.aws_vpc.myVPC",
            "module.vpc.data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06136653e78995cfc",
            "route_table_id": "rtb-08b1fbc87525df0ff",
            "subnet_id": "subnet-0b9a7857943f7c5c7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.myVPC",
            "module.vpc.data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association_2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c7552bfccaa85f2",
            "route_table_id": "rtb-08b1fbc87525df0ff",
            "subnet_id": "subnet-07faae8650cef5084"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.myVPC",
            "module.vpc.data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:158969377838:security-group/sg-04fc4ff69aefb2cbf",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fc4ff69aefb2cbf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "tcw_security_group",
            "name_prefix": "",
            "owner_id": "158969377838",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tcw_security_group"
            },
            "tags_all": {
              "Name": "tcw_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-086b83869aea0bab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:158969377838:subnet/subnet-091b3a9d675d7b17c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091b3a9d675d7b17c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "158969377838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tcw_database_subnet_az_1a"
            },
            "tags_all": {
              "Name": "tcw_database_subnet_az_1a"
            },
            "vpc_id": "vpc-086b83869aea0bab8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myVPC",
            "module.vpc.data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:158969377838:subnet/subnet-069fa574f61c0bdb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069fa574f61c0bdb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "158969377838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tcw_database_subnet_az_1b"
            },
            "tags_all": {
              "Name": "tcw_database_subnet_az_1b"
            },
            "vpc_id": "vpc-086b83869aea0bab8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myVPC",
            "module.vpc.data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:158969377838:subnet/subnet-0b9a7857943f7c5c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9a7857943f7c5c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "158969377838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tcw_public_subnet_az_1a"
            },
            "tags_all": {
              "Name": "tcw_public_subnet_az_1a"
            },
            "vpc_id": "vpc-086b83869aea0bab8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myVPC",
            "module.vpc.data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:158969377838:subnet/subnet-07faae8650cef5084",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07faae8650cef5084",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "158969377838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tcw_public_subnet_az_1b"
            },
            "tags_all": {
              "Name": "tcw_public_subnet_az_1b"
            },
            "vpc_id": "vpc-086b83869aea0bab8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myVPC",
            "module.vpc.data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVPC",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:158969377838:vpc/vpc-086b83869aea0bab8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0c7f59ffa7507a3ed",
            "default_route_table_id": "rtb-001aadc4334125a6c",
            "default_security_group_id": "sg-05b3f3d0f067fa814",
            "dhcp_options_id": "dopt-07fd07c1a5f004ae0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-086b83869aea0bab8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-001aadc4334125a6c",
            "owner_id": "158969377838",
            "tags": {
              "Name": "tcw_vpc"
            },
            "tags_all": {
              "Name": "tcw_vpc"
            }
          }
        }
      ]
    }
  ]
}